--- a/MicrosoftNoteExample/MainWindow.xaml
+++ b/MicrosoftNoteExample/MainWindow.xaml
@@ -28,6 +28,6 @@
         </TitleBar>
 
         <!-- App content -->
-        <Frame x:Name="rootFrame" Grid.Row="1"/>
+        <Frame x:Name="rootFrame" SourcePageType="local:NotePage" Grid.Row="1"/>
     </Grid>
 </Window>
