--- a/MicrosoftNoteExample/Views/NotePage.xaml
+++ b/MicrosoftNoteExample/Views/NotePage.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="MicrosoftNoteExample.NotePage"
+    x:Class="MicrosoftNoteExample.Views.NotePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MicrosoftNoteExample"
@@ -23,7 +23,8 @@
          AcceptsReturn="True"
          TextWrapping="Wrap"
          PlaceholderText="Enter your note"
-         Header="New note"
+         Header="{x:Bind NoteModel.Date.ToString()}"
+         Text="{x:Bind NoteModel.Text, Mode=TwoWay}"
          ScrollViewer.VerticalScrollBarVisibility="Auto"
          Width="400"
          Grid.Column="1"/>
